--- a/_config.yml
+++ b/_config.yml
@@ -23,19 +23,19 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Jingzhe Huang"
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Hello, this is Bamao's Home."
   location         : "China"
-  employer         : "J.P. Morgan Chase"
+  # employer         : "J.P. Morgan Chase"
   uri              : # URL
   email            : "Jingzhe-Huang@outlook.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
+  # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  # impactstory      : # URL
   orcid            : "http://orcid.org/yourorcidurl"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
