--- a/_config.yml
+++ b/_config.yml
@@ -226,7 +226,7 @@ collections:
 
 # These settings control how pages and collections are included in the site
 defaults:
-  # _posts
+  _posts
   - scope:
       path: ""
       type: posts
@@ -244,7 +244,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _teaching
+  _teaching
   - scope:
       path: ""
       type: teaching
@@ -253,7 +253,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _publications
+  _publications
   - scope:
       path: ""
       type: publications
@@ -262,7 +262,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  _portfolio
   - scope:
       path: ""
       type: portfolio
@@ -271,7 +271,7 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
+  _talks
   - scope:
       path: ""
       type: talks
